# st-chunk

./: README.md  config.yaml  pyproject.toml
.streamlit/: config.toml  secrets.toml
app/: app copy.py  app.py  database.py  main.py  menu.py  user_manager.py
app/_pages/: admin_page.py  answer_page.py  dashboard_page.py  home_page.py
app/_pages/admin/: create_survey.py  manage_questions.py  manage_surveys.py  show_surveys.py
app/database/: database.py  init_db.py  models.py
app/login/: local_login.py
app/pages/: user_home.py
app/pages/admin/: survey_admin.py  survey_create.py  survey_edit.py
app/pages/user/: answer_mode.py  survey_answer.py  survey_history.py  user_dashboard.py
app/pages_/user/: home.py
frontend/app/: package.json
frontend/app/src/: App.tsx  config.ts  main.tsx
frontend/app/src/components/: AppBar.tsx  LoginButton.tsx
frontend/app/src/pages/: AboutPage.tsx  ContactPage.tsx  HomePage.tsx
