[project]
name = "survey"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.2.3",
    "pysqlite3>=0.5.4",
    "pyyaml>=6.0.2",
    "streamlit>=1.45.1",
    "streamlit-authenticator>=0.4.2",
    "streamlit-community-navigation-bar>=4.7.7",
    "streamlit-extras>=0.7.1",
    "streamlit-option-menu>=0.4.0",
    "streamlit-survey>=1.0.2",
]
